Fix spacing

--- a/styles/blog-post.module.css
+++ b/styles/blog-post.module.css
@@ -12,9 +12,11 @@
   max-width: 720px;
 
   font-size: 16px;
+  margin-bottom: 3rem;
 }
 
 .pageTitle {
   padding: 0;
+  padding-bottom: 1rem;
   max-width: 720px;
 }
